# KalshiTrader

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
config/: kalshi_fair_value_config.json  kalshi_fair_value_live.json  runtime_flags.json
deploy/: cloudformation.yml
docs/: crypto_arbitrage_feasibility_research.md  kalshi_crypto_fair_value_scanner_plan.md  kalshi_crypto_fair_value_tracking_error_report.md  kalshi_crypto_multi_asset_report.md  kalshi_feed_lag_cross_asset_report.md  kalshi_feed_lag_expanded_sample.md  kalshi_ideas_leader_analysis.md  kalshi_lag_opportunity_ranking.md  kalshi_lag_research_findings_2026-04-21.md  kalshi_multi_category_lag_research.md  kalshi_mve_combo_market_research.md  kalshi_phase1_feasibility_report.md  kalshi_phase1_smoke_test_findings.md  kalshi_research_collection_summary.md  kalshi_scanner_execution_plan.md  kalshi_scanner_implementation_tasks.md  kalshi_shadow_live_capture_results.md  prediction_market_arbitrage_video_breakdown_and_opinion.md  pure_lag_tuning_results.md  three_model_backtest_results.md
memory/: README.md  context.md
scripts/: analyze_simulation.py  backtest_three_models.py  calibrate_sigma.py  coinbase_historical_pull.py  coinbase_trades_pull.py  deploy_prod.sh  kalshi_collect_research.py  kalshi_contract_terms_pull.py  kalshi_historical_pull.py  kalshi_ideas_pull.py  kalshi_public_pull.py  kalshi_registry_build.py  kalshi_series_discover.py  kalshi_track_reference.py  kalshi_trades_pull.py  migrate_db.py  rollup_phase_timings.py  run_dashboard.sh  run_local.sh  (+1 more)
(+82 files in other folders)
